; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ral/extr_rt2860.c_rt2860_set_leds.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ral/extr_rt2860.c_rt2860_set_leds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt2860_softc = type { i32 }

@RT2860_MCU_CMD_LEDS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rt2860_softc*, i32)* @rt2860_set_leds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rt2860_set_leds(%struct.rt2860_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.rt2860_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.rt2860_softc* %0, %struct.rt2860_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.rt2860_softc*, %struct.rt2860_softc** %3, align 8
  %6 = load i32, i32* @RT2860_MCU_CMD_LEDS, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.rt2860_softc*, %struct.rt2860_softc** %3, align 8
  %9 = getelementptr inbounds %struct.rt2860_softc, %struct.rt2860_softc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = and i32 %10, 127
  %12 = or i32 %7, %11
  %13 = call i32 @rt2860_mcu_cmd(%struct.rt2860_softc* %5, i32 %6, i32 %12, i32 0)
  ret void
}

declare dso_local i32 @rt2860_mcu_cmd(%struct.rt2860_softc*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
